change a formatting, remove default ugly styles

--- a/project-final/mystyles.css
+++ b/project-final/mystyles.css
@@ -5,14 +5,13 @@ h1 {
 
 .text-color {
     color: aqua;
-    font-family: 'Dancing Script', cursive ;
-    
-    
+    font-family: 'Dancing Script', cursive;
 }
 
 
 
 .css-box-model {
-    border-color:  rgb(13, 72, 131);
+    border-color: rgb(13, 72, 131);
+    text-decoration: none;
+    color: #fff;
 }
-
